// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Hero /> should render correctly with image url 1`] = `
<div
  className="hero"
>
  <div
    className="hero__image"
    style={
      Object {
        "backgroundImage": "url(image.jpeg)",
      }
    }
  >
    <h1>
      Hero
    </h1>
  </div>
</div>
`;

exports[`<Hero /> should render correctly without image url 1`] = `
<div
  className="hero"
>
  <div
    className="hero__image"
    style={
      Object {
        "backgroundImage": "url()",
      }
    }
  >
    <h1>
      Hero
    </h1>
  </div>
</div>
`;
